[gd_scene load_steps=4 format=2]

[ext_resource path="res://guns/hand cannon/hand_cannon.gd" type="Script" id=1]
[ext_resource path="res://guns/hand cannon/red_hand_cannon.png" type="Texture" id=2]

[sub_resource type="RayShape2D" id=1]
length = 72.0

[node name="hand cannon" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 6, 1 )
texture = ExtResource( 2 )

[node name="bullet" type="Area2D" parent="."]
collision_layer = 33

[node name="bulletPath" type="CollisionShape2D" parent="bullet"]
position = Vector2( 9.413, -0.263527 )
rotation = -1.5708
shape = SubResource( 1 )
disabled = true

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="shotLength" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="bullet" to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="shotLength" to="." method="_on_shotLength_timeout"]
